# your-first-agent

./: .gitignore  README.md  TODO.md  pyproject.toml
00-course-setup/: 01-what-is-agent.cn.md  01-what-is-agent.en.md  02-what-is-mcp.cn.md  02-what-is-mcp.en.md  README.md
00_导言/: 01_环境配置.md  02_什么是 Agent.md  03_什么是 MCP.md
01-simple-agent/: 01-langchain.ipynb  02-qwen-agent.ipynb  03-pydantic-ai.ipynb  README.md
01-task-oriented/01-single-tool/: 01-langchain.ipynb  03-pydantic-ai.ipynb  README.md
01_最小可用的Agent/: 01_langchain.py
02_多工具单Agent/: 01_langchain.py
mcp_servers/: README.md  finance.py  finance_hot_news.py
