[project]
name = "your-first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "fastmcp>=2.13.1",
    "google-adk>=1.18.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain[openai]>=1.0.7",
    "litellm>=1.80.0",
    "openai>=2.8.0",
    "openai-agents>=0.5.1",
    "python-dotenv>=1.2.1",
    "qwen-agent[mcp]>=0.0.31",
    "requests>=2.32.5",
]
